[gd_scene load_steps=7 format=3 uid="uid://cfdxkqcchvu5v"]

[ext_resource type="Script" uid="uid://lqp17exadnit" path="res://Scripts/setting.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://1ae4vi6pid6i" path="res://Assets/scoreboard/Setting.PNG" id="2"]
[ext_resource type="Texture2D" uid="uid://daarqr7s84yhj" path="res://Assets/scoreboard/sound_icon.PNG" id="3"]
[ext_resource type="Texture2D" uid="uid://ctkje7j2njh5t" path="res://Assets/san.png" id="4_1pxt3"]
[ext_resource type="Texture2D" uid="uid://bsbwfxcikp7qy" path="res://Assets/san_progress.png" id="5_crjqs"]
[ext_resource type="Texture2D" uid="uid://dfn0wvtel2sg8" path="res://Assets/scoreboard/big_x.png" id="6_1pxt3"]

[node name="Setting" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("2")
stretch_mode = 5

[node name="LevelDigit1Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.526
anchor_top = 0.5
anchor_right = 0.526
anchor_bottom = 0.5
offset_left = -8.280029
offset_top = -304.0
offset_right = 21.71997
offset_bottom = -249.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.072842635, 0.072842635, 0.072842635, 1)
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelDigit2Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.584
anchor_top = 0.5
anchor_right = 0.584
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -302.5
offset_right = 50.0
offset_bottom = -247.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.072842635, 0.072842635, 0.072842635, 1)
theme_override_font_sizes/font_size = 40
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundIcon" type="TextureButton" parent="."]
visible = false
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -634.0
offset_top = -356.0
offset_right = 646.0
offset_bottom = 364.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3")
stretch_mode = 0

[node name="VolumeControlPanel" type="Control" parent="."]
z_index = 20
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="VolumeControlPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.9)

[node name="VBoxContainer" type="VBoxContainer" parent="VolumeControlPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VolumeControlPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Volume Setting"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VolumeControlPanel/VBoxContainer"]
layout_mode = 2

[node name="BGMSection" type="VBoxContainer" parent="VolumeControlPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="BGMLabel" type="Label" parent="VolumeControlPanel/VBoxContainer/BGMSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "BGM"

[node name="BGMSlider" type="HSlider" parent="VolumeControlPanel/VBoxContainer/BGMSection"]
layout_mode = 2
value = 100.0

[node name="BGMValueLabel" type="Label" parent="VolumeControlPanel/VBoxContainer/BGMSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "100%"
horizontal_alignment = 1

[node name="SFXSection" type="VBoxContainer" parent="VolumeControlPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="SFXLabel" type="Label" parent="VolumeControlPanel/VBoxContainer/SFXSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="VolumeControlPanel/VBoxContainer/SFXSection"]
layout_mode = 2
value = 100.0

[node name="SFXValueLabel" type="Label" parent="VolumeControlPanel/VBoxContainer/SFXSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "100%"
horizontal_alignment = 1

[node name="SoundBar" type="TextureProgressBar" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -759.0
offset_top = 320.0
offset_right = -335.0
offset_bottom = 357.0
grow_horizontal = 0
value = 100.0
texture_under = ExtResource("4_1pxt3")
texture_progress = ExtResource("5_crjqs")

[node name="XButton" type="TextureButton" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -388.0
offset_top = 32.0
offset_right = -291.0
offset_bottom = 130.0
grow_horizontal = 0
texture_normal = ExtResource("6_1pxt3")
